--- a/_ngClient/partials/home.html
+++ b/_ngClient/partials/home.html
@@ -14,6 +14,7 @@
 	<a href='/ftse350'>/ftse350</a><br>
  
   <h3>Test Cases For Prices</h3>
+		<a href='/scrape/test?n=1'>/scrape/test?n=0</a><br>  
 		<a href='/scrape/test?n=1'>/scrape/test?n=1</a><br>
 		<a href='/scrape/test?n=2'>/scrape/test?n=2</a><br>		
 		<a href='/scrape/test?n=3'>/scrape/test?n=3</a><br>
