--- a/_ngClient/partials/home.html
+++ b/_ngClient/partials/home.html
@@ -10,8 +10,21 @@
  
     
 <p>	
-	<a href='/ise'>/ise</a><br>
-	<a href='/ftse350'>/ftse350</a><br>
+	<a href='/scrape/ise'>/ise</a><br>
+	<a href='/scrape/ftse350'>/ftse350</a><br>
+	<a href='/scrape/coinranking'>/coinranking</a><br>	
+	
+	
+<p>
+
+	<a href='/scrape/assets/ise/AIBG.I'>/scrape/assets/ise/AIBG.I</a><br>	
+	<a href='/scrape/assets/ise/BIRG.I'>/scrape/assets/ise/BIRG.I</a><br>	
+	<a href='/scrape/assets/ise/CRH.I'>/scrape/assets/ise/CRH.I</a><br>	
+	<a href='/scrape/assets/ftse350/TSCO'>/scrape/assets/ise/TSCO</a><br>	
+	<a href='/scrape/assets/coinranking/ripple-xrp'>/scrape/assets/coinranking/ripple-xrp</a><br>	
+	
+	
+	
  
   <h3>Test Cases For Prices</h3>
 		<a href='/scrape/test?n=1'>/scrape/test?n=0</a><br>  
