_ replaces . in keys

--- a/_ngClient/partials/home.html
+++ b/_ngClient/partials/home.html
@@ -17,9 +17,9 @@
 	
 <p>
 
-	<a href='/scrape/assets/ise/AIBG.I'>/scrape/assets/ise/AIBG.I</a><br>	
-	<a href='/scrape/assets/ise/BIRG.I'>/scrape/assets/ise/BIRG.I</a><br>	
-	<a href='/scrape/assets/ise/CRH.I'>/scrape/assets/ise/CRH.I</a><br>	
+	<a href='/scrape/assets/ise/AIBG_I'>/scrape/assets/ise/AIBG_I</a><br>	
+	<a href='/scrape/assets/ise/BIRG_I'>/scrape/assets/ise/BIRG_I</a><br>	
+	<a href='/scrape/assets/ise/CRH_I'>/scrape/assets/ise/CRH_I</a><br>	
 	<a href='/scrape/assets/ftse350/TSCO'>/scrape/assets/ise/TSCO</a><br>	
 	<a href='/scrape/assets/coinranking/ripple-xrp'>/scrape/assets/coinranking/ripple-xrp</a><br>	
 	
