--- a/_ngClient/partials/home.html
+++ b/_ngClient/partials/home.html
@@ -2,6 +2,11 @@
 <div class="col-md-12" >
 <h1>Home</h1>
  
+ 
+ 
+ <H1>Live Data only works if third-party sites are available</H1>
+ 
+ 
  <h3>Live</h3>
  	<a href='/scrape/all'>/scrape/all</a><br>
  	<a href='/scrape?exchange=ise'>/scrape?exchange=ise</a><br>
@@ -20,7 +25,7 @@
 	<a href='/scrape/assets/ise/AIBG_I'>/scrape/assets/ise/AIBG_I</a><br>	
 	<a href='/scrape/assets/ise/BIRG_I'>/scrape/assets/ise/BIRG_I</a><br>	
 	<a href='/scrape/assets/ise/CRH_I'>/scrape/assets/ise/CRH_I</a><br>	
-	<a href='/scrape/assets/ftse350/TSCO'>/scrape/assets/ise/TSCO</a><br>	
+	<a href='/scrape/assets/ftse350/TSCO'>/scrape/assets/ftse350/TSCO</a><br>	
 	<a href='/scrape/assets/coinranking/ripple-xrp'>/scrape/assets/coinranking/ripple-xrp</a><br>	
 	
 	
