--- a/_ngClient/partials/home.html
+++ b/_ngClient/partials/home.html
@@ -6,6 +6,8 @@
  
  <H1>Live Data only works if third-party sites are available</H1>
  
+ <H1>20180318 Using Way Back Machine to supply static FTS350 from July 2017</H1>
+ 
  
  <h3>Live</h3>
  	<a href='/scrape/all'>/scrape/all</a><br>
